MacOS runner changed to macos-13 to stay on x86

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -32,7 +32,7 @@ jobs:
           
   build_macos:
     # The type of runner that the job will run on
-    runs-on: macos-latest
+    runs-on: macos-13
     
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
