examples/Makefile: Correct exit code on error

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,6 @@
 .PHONY: all
 
 all:
-	set -e
-	for file in *.memeasm ; do memeasm -o $$(basename $$file .memeasm) $$file ; done
-	for dir in */ ; do cd $$dir && make && cd .. ; done
+	for file in *.memeasm ; do memeasm -o $$(basename $$file .memeasm) $$file || exit 1 ; done
+	for dir in */ ; do cd $$dir && make || exit 1 && cd .. ; done
 
